# pokewarp-rs

./: .gitignore  .gitmodules  Cargo.toml  TODO.md  history.txt  package-lock.json
pokeparser/: .gitignore  Cargo.toml
pokeparser/src/: lib.rs  main.rs  pokedex.rs  utils.rs
pokeparser/src/pokemon/: mod.rs  pk5.rs
pokeparser/src/saves/: gen5.rs  mod.rs
pokewarp-web/: .gitmodules  Cargo.toml
pokewarp-web/data/: items.json  pokedex.json
pokewarp-web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
pokewarp-web/frontend/src/: App.vue  data.ts  utils.ts
pokewarp-web/frontend/src/components/: Avatar.vue  Box.vue  BoxSelector.vue  BoxSlot.vue  Boxes.vue  Overview.vue  Party.vue  PartySlot.vue  SearchButton.vue  UploadButton.vue  UserBar.vue
pokewarp-web/frontend/src/composables/: useSession.ts
pokewarp-web/schema/: boxed.surql  pkm.surql  user.surql
pokewarp-web/src/: main.rs
pokewarp-web/src/handlers/: auth.rs  mod.rs  parse_sav.rs
