[package]
name = "pokeparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0"
serde = { version = "1.0", features = ["derive"] }
uint = "0.9.5"
rug = "1.12.0"
byteorder = "1.4.3"
thiserror = "1.0.44"
