[package]
name = "pokewarp-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["multipart"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
pokeparser = { path = "../pokeparser" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

