[package]
name = "pokewarp-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["multipart"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
pokeparser = { path = "../pokeparser" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
surrealdb = "1.0.0-beta.9"
axum-login = "0.5.0"
eyre = "0.6.8"
password-auth = "0.3.0"
axum-macros = "0.3.8"
rand = "0.8.5"

